# teamhack_rest

./: .gitignore  .pyproject.toml.swp  Dockerfile  README.md  demo.sh  dev.sh  docker-compose.yaml  old.py  post-2.txt  post.txt  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: pkgrel.yml
etc/: README.md
old/: setup.cfg
src/teamhack_db/: __main__.py  cli.py  sql.py
src/teamhack_dns/: __main__.py  server.py
tests/teamhack_db/: test_cli.py  test_sql.py
uploads/: tmp36dw920m.py  tmp4gfxlnqo.py  tmp7jsfwirb.py  tmp8vh5u96i.py  tmp9cevcu6y.py  tmpay6tfh7v.py  tmpb_q_b8__.py  tmpjnwxquk0.py  tmplx8y1gix.py  tmpo71tcqsa.py  tmpp1i7dp2u.py  tmptlruhaez.py  tmpuof67j5k.py
