[metadata]
name = teamhack
version = 1.0.0
author = InnovAnon, Inc.
author_email = InnovAnon-Inc@gmx.com
description = A simple DNS server in Python using psycopg2 backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InnovAnon-Inc/dnspy
project_urls =
    Docs = https://InnovAnon-Inc.github.io/dnspy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

